feat: initial commit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
   },
   "tsimporter.doubleQuotes": true,
   "typescript.enablePromptUseWorkspaceTsdk": true,
-  "typescript.tsdk": "node_modules/ttypescript/lib"
+  "typescript.tsdk": "node_modules/ttypescript/lib",
+  "discord.enabled": false
 }
