--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lint": "eslint src test --ext ts",
     "lint:fix": "eslint src test --fix --ext ts"
   },
+  "main": "dist/app.js",
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
