--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eris": "^0.14.1",
     "got": "^11.8.2",
     "moment": "^2.29.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "slash-create": "^3.0.1"
   }
 }
