--- a/package.json
+++ b/package.json
@@ -5,43 +5,37 @@
     "@commitlint/config-conventional": "^12.1.1",
     "@types/common-tags": "^1.8.0",
     "@types/dotenv-safe": "^8.1.1",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.37",
+    "@types/node": "^15.12.2",
     "@types/node-fetch": "^2.5.9",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
-    "eslint": "^7.23.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "eslint": "^7.28.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "husky": "^6.0.0",
-    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.1",
     "reflect-metadata": "^0.1.13",
-    "ts-jest": "^26.5.4",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.0.0",
     "ts-node-dev": "^1.1.6",
-    "ttypescript": "^1.5.12",
     "typescript": "^4.2.3"
   },
   "scripts": {
-    "start": "ts-node --compiler ttypescript --project src/tsconfig.json src/app.ts",
-    "start:watch": "ts-node-dev --compiler ttypescript --project src/tsconfig.json --respawn src/app.ts",
-    "start:prod": "node .",
-    "build": "ttsc --build src",
-    "test": "jest",
-    "lint": "eslint src test --ext ts",
-    "lint:fix": "eslint src test --fix --ext ts",
+    "lint": "eslint src --ext .ts --fix",
+    "start": "ts-node src/app.ts",
+    "watch": "ts-node-dev src/app.ts",
     "prepare": "husky install"
   },
   "main": "dist/app.js",
   "dependencies": {
+    "@top-gg/sdk": "^3.1.1",
     "chalk": "^4.1.0",
     "common-tags": "^1.8.0",
     "discord-command-parser": "^1.5.3",
     "dotenv-safe": "^8.2.0",
-    "eris": "^0.14.1",
+    "eris": "^0.15.1",
     "got": "^11.8.2",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
