--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,10 +1,11 @@
 {
+  "arrowParens": "avoid",
+  "bracketSpacing": true,
+  "endOfLine": "lf",
+  "printWidth": 140,
+  "semi": true,
   "useTabs": false,
   "tabWidth": 2,
-  "semi": true,
-  "endOfLine": "lf",
   "singleQuote": false,
-  "trailingComma": "all",
-  "printWidth": 140,
-  "arrowParens": "avoid"
+  "trailingComma": "all"
 }
