--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
+    "target": "ES2020",
     "lib": ["ESNext"],
-    "target": "ES2018",
     "strict": true,
+    "noEmit": true,
     "module": "CommonJS",
+    "moduleResolution": "Node",
     "skipLibCheck": true,
-    "inlineSourceMap": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "esModuleInterop": true
-  }
+    "emitDecoratorMetadata": true
+  },
+  "include": ["src/**/*.ts"]
 }
