--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ node_js:
 cache: yarn
 jobs:
   include:
-    - stage: lint
+    - stage: test
       script:
         - yarn
         - yarn lint
 stages:
-  - name: lint
+  - name: test
     if: type = push
