--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "typescript": "^4.2.3"
   },
   "scripts": {
-    "lint": "eslint src --ext .ts --fix",
+    "lint": "eslint src --ext .ts",
     "start": "ts-node src/app.ts",
     "watch": "ts-node-dev src/app.ts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "npm-run-all lint"
   },
   "main": "dist/app.js",
   "dependencies": {
