--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
     "@commitlint/config-conventional": "^12.1.1",
     "@types/common-tags": "^1.8.0",
     "@types/dotenv-safe": "^8.1.1",
-    "@types/js-yaml": "^4.0.1",
-    "@types/luxon": "^1.27.0",
     "@types/node": "^15.12.2",
-    "@types/node-7z": "^2.1.1",
     "@types/node-fetch": "^2.5.9",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
@@ -34,7 +31,6 @@
   },
   "main": "dist/app.js",
   "dependencies": {
-    "7zip-bin": "^5.1.1",
     "@top-gg/sdk": "^3.1.1",
     "chalk": "^4.1.0",
     "common-tags": "^1.8.0",
@@ -42,12 +38,8 @@
     "dotenv-safe": "^8.2.0",
     "eris": "^0.15.1",
     "got": "^11.8.2",
-    "js-yaml": "^4.1.0",
-    "luxon": "^1.27.0",
     "moment": "^2.29.1",
-    "node-7z": "^2.1.2",
     "node-fetch": "^2.6.1",
-    "slash-create": "^3.0.1",
-    "superstruct": "^0.15.2"
+    "slash-create": "^3.0.1"
   }
 }
