refactor!: begin update to discord.js@13 and general cleanup
Co-authored-by: vcokltfre <vcokltfre@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
+NODE_ENV=production # NODE_ENV=development
 DISCORD_TOKEN=
 COMMAND_TESTING_GUILD=
 APPLICATION_ID=
 CLIENT_PUBLIC_KEY=
 TOPGG_TOKEN=
+TOPGG_URL=
