--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,15 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["@typescript-eslint", "prettier", "jsdoc", "license-header"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
-    "plugin:eslint-comments/recommended"
+    "plugin:eslint-comments/recommended",
+    "plugin:jsdoc/recommended",
+    "plugin:import/recommended",
+    "plugin:import/typescript"
   ],
   "rules": {
     "require-await": "error",
@@ -15,7 +18,29 @@
     "@typescript-eslint/no-this-alias": "off",
     "@typescript-eslint/no-non-null-assertion": "warn",
     "no-console": "warn",
-    "eslint-comments/no-use": ["warn", { "allow": [] }]
+    "eslint-comments/no-use": ["warn", { "allow": [] }],
+    "jsdoc/require-jsdoc": [
+      "warn",
+      {
+        "require": {
+          "ClassDeclaration": true,
+          "MethodDefinition": true
+        },
+        "checkConstructors": false,
+        "enableFixer": true
+      }
+    ],
+    "jsdoc/require-param-type": "off",
+    "jsdoc/require-returns-type": "off",
+    "license-header/header": ["error", "./license-header.txt"]
+  },
+  "settings": {
+    "jsdoc": {
+      "mode": "typescript"
+    },
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    }
   },
   "parserOptions": {
     "project": "./tsconfig.json"
