--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
     "@commitlint/config-conventional": "^12.1.1",
     "@types/common-tags": "^1.8.0",
     "@types/dotenv-safe": "^8.1.1",
-    "@types/node": "^15.12.2",
-    "@types/node-fetch": "^2.5.9",
+    "@types/ioredis": "^4.26.4",
+    "@types/luxon": "^1.27.0",
+    "@types/node": "^14",
+    "@types/node-7z": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsdoc": "^35.4.1",
+    "eslint-plugin-license-header": "^0.2.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^6.0.0",
+    "husky": "^7.0.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.1",
@@ -24,22 +29,20 @@
   },
   "scripts": {
     "lint": "eslint src --ext .ts",
-    "start": "ts-node src/app.ts",
-    "watch": "ts-node-dev src/app.ts",
+    "start": "ts-node src/main.ts",
+    "watch": "ts-node-dev src/main.ts",
     "prepare": "husky install",
     "test": "npm-run-all lint"
   },
-  "main": "dist/app.js",
   "dependencies": {
+    "7zip-bin": "^5.1.1",
     "@top-gg/sdk": "^3.1.1",
     "chalk": "^4.1.0",
     "common-tags": "^1.8.0",
-    "discord-command-parser": "^1.5.3",
+    "discord.js": "^13.0.0-dev.941cd86.1625141252",
     "dotenv-safe": "^8.2.0",
-    "eris": "^0.15.1",
-    "got": "^11.8.2",
-    "moment": "^2.29.1",
-    "node-fetch": "^2.6.1",
-    "slash-create": "^3.0.1"
+    "ioredis": "^4.27.6",
+    "luxon": "^1.27.0",
+    "node-7z": "^2.1.2"
   }
 }
