--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@top-gg/sdk": "^3.1.1",
     "chalk": "^4.1.0",
     "common-tags": "^1.8.0",
+    "discord-api-types": "^0.19.0-next.f393ba520d7d6d2aacaca7b3ca5d355fab614f6e",
     "discord.js": "^13.0.0-dev.941cd86.1625141252",
     "dotenv-safe": "^8.2.0",
     "ioredis": "^4.27.6",
