--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: node_js
 node_js:
   - "14"
-  - "15"
 cache: yarn
 jobs:
   include:
     - stage: test
       script:
-        - yarn
-        - yarn lint
+        - rm -rf node_modules
+        - yarn install --frozen-lockfile
+        - yarn test
 stages:
   - name: test
     if: type = push
