style: tweak some eslint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,10 +14,10 @@
   "rules": {
     "require-await": "error",
     "@typescript-eslint/no-floating-promises": "error",
-    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/no-this-alias": "off",
-    "@typescript-eslint/no-non-null-assertion": "off",
-    "no-console": "warn",
+    "@typescript-eslint/no-non-null-assertion": "error",
+    "no-console": "error",
     "eslint-comments/no-use": ["warn", { "allow": [] }],
     "jsdoc/require-jsdoc": [
       "warn",
