--- a/package.json
+++ b/package.json
@@ -5,43 +5,47 @@
     "start": "ts-node src/main.ts",
     "watch": "ts-node-dev src/main.ts",
     "prepare": "husky install",
-    "test": "npm-run-all lint"
+    "test:jest": "jest",
+    "test": "npm-run-all --parallel lint test:jest"
   },
   "dependencies": {
+    "7zip-bin": "^5.1.1",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
     "@top-gg/sdk": "^3.1.1",
     "@types/common-tags": "^1.8.0",
     "@types/dotenv-safe": "^8.1.1",
     "@types/ioredis": "^4.26.4",
+    "@types/jest": "^26.0.23",
     "@types/luxon": "^1.27.0",
-    "@types/node-7z": "^2.1.1",
     "@types/node": "^14",
+    "@types/node-7z": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
-    "7zip-bin": "^5.1.1",
     "chalk": "^4.1.0",
     "common-tags": "^1.8.0",
     "discord-api-types": "^0.19.0-next.f393ba520d7d6d2aacaca7b3ca5d355fab614f6e",
     "discord.js": "^13.0.0-dev.941cd86.1625141252",
     "dotenv-safe": "^8.2.0",
+    "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsdoc": "^35.4.1",
     "eslint-plugin-license-header": "^0.2.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint": "^7.28.0",
     "husky": "^7.0.0",
     "ioredis": "^4.27.6",
+    "jest": "^27.0.6",
     "luxon": "^1.27.0",
     "node-7z": "^2.1.2",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.1",
     "reflect-metadata": "^0.1.13",
-    "ts-node-dev": "^1.1.6",
+    "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   }
 }
