--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node-7z": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
+    "axios": "^0.21.1",
     "chalk": "^4.1.0",
     "common-tags": "^1.8.0",
     "discord-api-types": "^0.19.0-next.f393ba520d7d6d2aacaca7b3ca5d355fab614f6e",
