--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "luxon": "^1.28.0",
     "node-7z": "^2.1.2",
     "npm-run-all": "^4.1.5",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "src": "link:./src"
   }
 }
