refactor(*)!: add API, refactor .env

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,18 @@
-NODE_ENV=production # NODE_ENV=development
-DISCORD_TOKEN=
-COMMAND_TESTING_GUILD=
-APPLICATION_ID=
-CLIENT_PUBLIC_KEY=
-TOPGG_TOKEN=
-TOPGG_URL=
-SUPPORT_INVITE=
+NODE_ENV= # "production" or "development"
+
+API_PORT=8000
+API_HOST=0.0.0.0
+API_TIMEOUT=3000
+
+REDIS_PORT=6379
+REDIS_HOST=redis
+
+DISCORD_TOKEN= # Discord bot token
+DISCORD_APPLICATION_ID= # Discord application ID
+DISCORD_PUBLIC_KEY= # Discord public key
+TESTING_GUILD_ID= # Discord guild ID (optional)
+
+TOPGG_TOKEN= # Top.gg API token
+TOPGG_VOTE_URL=https://remoji.gg/vote
+
+SUPPORT_INVITE=https://remoji.gg/support
