--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@types/common-tags": "^1.8.1",
-    "@types/dotenv-safe": "^8.1.2",
+    "@types/express": "^4",
     "@types/ioredis": "^4.26.5",
     "@types/luxon": "^1.27.1",
     "@types/node": "^16.3.1",
@@ -42,7 +42,8 @@
     "common-tags": "^1.8.0",
     "discord-api-types": "next",
     "discord.js": "dev",
-    "dotenv-safe": "^8.2.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "ioredis": "^4.27.6",
     "luxon": "^1.28.0",
     "node-7z": "^2.1.2",
