build: exclude _volumes from vscode search

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,7 +36,8 @@
   },
   "search.exclude": {
     "**/.yarn": true,
-    "**/.pnp.*": true
+    "**/.pnp.*": true,
+    "**/_volumes": true
   },
   "eslint.nodePath": ".yarn/sdks",
   "prettier.prettierPath": ".yarn/sdks/prettier/index.js"
