refactor(Bot): streamline environment resolution and isDeveloper checks

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ DISCORD_TOKEN= # Discord bot token
 DISCORD_APPLICATION_ID= # Discord application ID
 DISCORD_PUBLIC_KEY= # Discord public key
 TESTING_GUILD_ID= # Discord guild ID (optional)
+DEVELOPER_ID= # Comma-separated list of Discord IDs of developers (only for development)
 
 TOPGG_TOKEN= # Top.gg API token
 TOPGG_VOTE_URL=https://remoji.gg/vote
