--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "node-7z": "^2.1.2",
     "npm-run-all": "^4.1.5",
     "reflect-metadata": "^0.1.13",
-    "src": "link:./src"
+    "src": "link:./src",
+    "superstruct": "^0.15.2"
   }
 }
