--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"eslint": "^7.30.0",
 		"eslint-config-marine": "^9.0.6",
 		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-import": "^2.23.4",
 		"eslint-plugin-prettier": "^3.4.0",
 		"husky": "^7.0.1",
 		"is-ci": "^3.0.0",
