--- a/package.json
+++ b/package.json
@@ -7,38 +7,38 @@
 		"test": "tsc"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^12.1.4",
-		"@commitlint/config-angular": "^12.1.4",
+		"@commitlint/cli": "^13.1.0",
+		"@commitlint/config-angular": "^13.1.0",
 		"@types/dotenv-safe": "^8.1.2",
 		"@types/express": "^4.17.13",
 		"@types/glob": "^7.1.4",
 		"@types/ioredis": "^4.26.6",
-		"@types/node": "^16.3.3",
-		"@typescript-eslint/eslint-plugin": "^4.28.3",
-		"@typescript-eslint/parser": "^4.28.3",
+		"@types/node": "^16.4.10",
+		"@typescript-eslint/eslint-plugin": "^4.29.0",
+		"@typescript-eslint/parser": "^4.29.0",
 		"cross-env": "^7.0.3",
-		"eslint": "^7.30.0",
+		"eslint": "^7.32.0",
 		"eslint-config-marine": "^9.0.6",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-import": "^2.23.4",
 		"eslint-plugin-prettier": "^3.4.0",
 		"husky": "^7.0.1",
 		"is-ci": "^3.0.0",
-		"lint-staged": "^11.0.1",
+		"lint-staged": "^11.1.1",
 		"prettier": "^2.3.2",
 		"ts-node": "^10.1.0",
-		"tslib": "^1.14.1",
+		"tslib": "^2.3.0",
 		"typescript": "^4.3.5"
 	},
 	"dependencies": {
 		"@remoji-bot/core": "^0.0.4",
 		"@top-gg/sdk": "^3.1.2",
-		"discord-api-types": "^0.19.0-next.4a83629.1626570047",
-		"discord.js": "^13.0.0-dev.4d53d0f.1626523373",
+		"discord-api-types": "^0.22.0",
+		"discord.js": "^13.0.0-dev.t1627949059.35fa3b3",
 		"dotenv-safe": "^8.2.0",
 		"express": "^4.17.1",
 		"glob": "^7.1.7",
-		"ioredis": "^4.27.6",
+		"ioredis": "^4.27.7",
 		"superstruct": "^0.15.2"
 	}
 }
