--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
 		"@types/dotenv-safe": "^8.1.2",
 		"@types/express": "^4.17.13",
 		"@types/glob": "^7.1.4",
-		"@types/ioredis": "^4.26.6",
-		"@types/node": "^16.4.10",
-		"@typescript-eslint/eslint-plugin": "^4.29.0",
-		"@typescript-eslint/parser": "^4.29.0",
+		"@types/ioredis": "^4.26.7",
+		"@types/node": "^16.4.13",
+		"@typescript-eslint/eslint-plugin": "^4.29.1",
+		"@typescript-eslint/parser": "^4.29.1",
 		"cross-env": "^7.0.3",
 		"eslint": "^7.32.0",
 		"eslint-config-marine": "^9.0.6",
 		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-import": "^2.23.4",
+		"eslint-plugin-import": "^2.24.0",
 		"eslint-plugin-prettier": "^3.4.0",
 		"husky": "^7.0.1",
 		"is-ci": "^3.0.0",
-		"lint-staged": "^11.1.1",
+		"lint-staged": "^11.1.2",
 		"prettier": "^2.3.2",
-		"ts-node": "^10.1.0",
+		"ts-node": "^10.2.0",
 		"tslib": "^2.3.0",
 		"typescript": "^4.3.5"
 	},
@@ -34,7 +34,7 @@
 		"@remoji-bot/core": "^0.0.4",
 		"@top-gg/sdk": "^3.1.2",
 		"discord-api-types": "^0.22.0",
-		"discord.js": "^13.0.0-dev.t1627949059.35fa3b3",
+		"discord.js": "^13.0.1",
 		"dotenv-safe": "^8.2.0",
 		"express": "^4.17.1",
 		"glob": "^7.1.7",
