--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "^16.2.3",
 		"@commitlint/config-angular": "^16.2.3",
+		"@commitlint/config-conventional": "^16.2.1",
 		"@types/dotenv-safe": "^8.1.2",
 		"@types/express": "^4.17.13",
 		"@types/glob": "^7.1.4",
@@ -20,7 +21,10 @@
 		"eslint": "^8.12.0",
 		"eslint-config-marine": "^9.0.6",
 		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-eslint-comments": "^3.2.0",
 		"eslint-plugin-import": "^2.24.0",
+		"eslint-plugin-jsdoc": "^38.0.7",
+		"eslint-plugin-license-header": "^0.4.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"husky": "^7.0.1",
 		"is-ci": "^3.0.0",
@@ -31,7 +35,7 @@
 		"typescript": "^4.6.3"
 	},
 	"dependencies": {
-		"@remoji-bot/core": "^0.1.0",
+		"@remoji-bot/core": "^0.1.1",
 		"@top-gg/sdk": "^3.1.2",
 		"discord-api-types": "^0.30.0",
 		"discord.js": "^13.0.1",
